tests/tldk/error/error-tldk-read-return-value2.pkt
// Establish a connection.
0   socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
+0  setsockopt(3, SOL_SOCKET, SO_REUSEADDR, [1], 4) = 0

+0  bind(3, ..., ...) = 0
+0  listen(3, 1) = 0

+0  < S 0:0(0) win 32792 <mss 1000,sackOK,nop,nop,nop,wscale 7>
+0 ~ +1  > S. 0:0(0) ack 1 <...>

+.1 < . 1:1(0) ack 1 win 32792
+0.1  accept(3, ..., ...) = 4

+0 < . 1:21(20) ack 1 win 30569 
+0 < . 21:41(20) ack 1 win 30318 
+0.1 read(4, ..., 101) =  40
+0 write(4, ..., 48) =  48
+0 < . 41:61(20) ack 1 win 13166 
+0 write(4, ..., 113) =  113
+0 < . 61:81(20) ack 1 win 13174 
+0 < . 81:101(20) ack 1 win 30062 
+0.1 read(4, ..., 101) =  60
+0 write(4, ..., 118) =  118
+0 < . 101:121(20) ack 1 win 30062 
+0.1 read(4, ..., 51) =  20
+0 < . 121:141(20) ack 1 win 30318 
+0.1 read(4, ..., 113) =  20
+0 < . 141:161(20) ack 1 win 14391 
+0 write(4, ..., 102) =  102
+0 < . 161:181(20) ack 1 win 29497 
+0.1 read(4, ..., 57) =  40
+0 write(4, ..., 106) =  106
+0 < . 181:201(20) ack 1 win 12851 
+0.1 read(4, ..., 115) =  20
+0 write(4, ..., 100) =  100

// check
+0 < . 201:221(20) ack 1 win 12593 
+0 > . 1:1(0) ack 21
+0.1 read(4, ..., 20) =  20
+0 < . 221:241(20) ack 1 win 12593 
+0 > P. 1:49(48) ack 41
+0.1 read(4, ..., 20) =  20
+0 < . 241:261(20) ack 1 win 12593 
+0 > . 49:49(0) ack 61
+0.1 read(4, ..., 20) =  20
